Enum "file_expose_type" {
  "PUBLIC"
  "PRESIGN"
  "PRIVATE"
}

Enum "message_role" {
  "user"
  "assistant"
}

Enum "message_status" {
  "INVALID_PAYLOAD"
  "FAIL"
  "SUCCESS"
  "DEAD"
}

Enum "users_status" {
  "ACTIVE"
  "INACTIVE"
}

Table "kysely_migration" {
  "name" varchar(255) [pk, not null]
  "timestamp" varchar(255) [not null]
}

Table "kysely_migration_lock" {
  "id" varchar(255) [pk, not null]
  "is_locked" int4 [not null, default: 0]
}

Table "accounts" {
  "id" uuid [pk, not null]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "username" text [unique, not null]
  "password" text [not null]
  "last_signed_in_at" timestamptz
}

Table "users" {
  "id" uuid [pk, not null]
  "email" text [unique, not null]
  "first_name" text [not null]
  "last_name" text [not null]
  "account_id" uuid [unique, not null]
  "user_status" users_status [not null, default: 'ACTIVE']
  "email_verified_at" timestamptz

  Indexes {
    account_id [type: btree, name: "idx_users_account_id"]
  }
}

Table "sessions" {
  "id" uuid [pk, not null]
  "account_id" uuid [not null]
  "token_hash" text [not null]
  "device_uid" text [not null]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "expire_at" timestamptz [not null]
  "revoke_at" timestamptz
  "info" jsonb [not null]

  Indexes {
    token_hash [type: btree, name: "sessions_token_hash"]
  }
}

Table "stored_files" {
  "id" uuid [pk, not null]
  "ref_name" text [not null]
  "key_path" text [not null]
  "owner_table" text [not null]
  "owner_id" uuid [not null]
  "filename" text [not null]
  "filesize_byte" int8 [not null]
  "storage_name" text [not null, default: 's3']
  "presign_url" text [not null]
  "file_expose_type" file_expose_type [not null, default: 'PRESIGN']
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "mime_type" text [not null]
  "extension" text [not null]
  "checksum" text
  "expire_at" timestamptz
}

Table "message_tasks" {
  "id" uuid [pk, not null]
  "queue_name" text [not null]
  "exchange_name" text [not null]
  "payload" jsonb [not null]
  "message_status" message_status [not null]
  "attempts" int4 [not null, default: 0]
  "max_attempts" int4 [not null, default: 5]
  "last_error" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "expire_at" timestamptz [not null]
}

Table "financial_data" {
  "company" text [not null]
  "ticker" text [not null]
  "sector" text [not null]
  "year" int4 [not null]
  "revenue" int8
  "net_income" int8
  "operating_income" int8
  "gross_profit" int8

  Indexes {
    (company, year) [pk, type: btree, name: "pk_financial_data"]
    ticker [type: btree, name: "idx_financial_data_ticker"]
  }
}

Table "conversations" {
  "id" uuid [pk, not null]
  "user_id" uuid [not null]
  "title" text [not null, default: 'New conversation']
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    user_id [type: btree, name: "idx_conversations_user_id"]
  }
}

Table "messages" {
  "id" uuid [pk, not null]
  "conversation_id" uuid [not null]
  "role" message_role [not null]
  "content" text [not null]
  "tool_call" jsonb
  "stopped" bool [not null, default: false]
  "cost_usd_micros" int8 [not null, default: 0]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (conversation_id, created_at) [type: btree, name: "idx_messages_conversation_id_created_at"]
  }
}

Table "email_verification_tokens" {
  "id" uuid [pk, not null]
  "user_id" uuid [not null]
  "token_hash" text [not null]
  "expires_at" timestamptz [not null]
  "created_at" timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    token_hash [type: btree, name: "idx_email_verification_tokens_token_hash"]
    user_id [type: btree, name: "idx_email_verification_tokens_user_id"]
  }
}

Ref "conversations_user_id_fkey":"users"."id" < "conversations"."user_id" [delete: cascade]

Ref "email_verification_tokens_user_id_fkey":"users"."id" < "email_verification_tokens"."user_id" [delete: cascade]

Ref "messages_conversation_id_fkey":"conversations"."id" < "messages"."conversation_id" [delete: cascade]

Ref "sessions_account_id_fkey":"accounts"."id" < "sessions"."account_id" [delete: cascade]

Ref "users_account_id_fkey":"accounts"."id" < "users"."account_id" [delete: cascade]
